# salty-747

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  build.py  flight_model.cfg  layout.json  manifest-base.json  manifest.json  package-lock.json  package.json  third_party_licenses
.ace/: canvas.json  project.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  form-bug-report.yml
.github/workflows/: dev.yml  pr.yml
asobo-aircraft-b7478i/: fr-FR.locPak  it-IT.locPak  ja-JP.locPak  layout.json  manifest.json  pt-BR.locPak  ru-RU.locPak
asobo-vcockpits-instruments/: layout.json  manifest.json
asobo-vcockpits-instruments-airliners/: layout.json  manifest.json
asobo-vcockpits-instruments-b747-8/: layout.json  manifest.json
asobo-vcockpits-instruments-navsystems/: layout.json  manifest.json
docs/: CONTRIBUTING.md
fs-base-aircraft-common/: ja-JP.locPak  layout.json  manifest.json
fs-base-aircraft-common/CheckpointsLibrary/: Asobo_DefaultCheckpointLibrary.xml
msfs-avionics-mirror/: SUPPORT.md
salty-747/: de-DE.locPak  en-US.locPak  es-ES.locPak  fi-FI.locPak  fr-FR.locPak  it-IT.locPak  ja-JP.locPak  layout.json  manifest.json  nb-NO.locPak  nl-NL.locPak  pl-PL.locPak  pt-BR.locPak  ru-RU.locPak  sv-SE.locPak  zh-CN.locPak
salty-747-livery/: layout.json  manifest.json
salty-747/effects/: LIGHT_B747_8i_BeaconBelly.fx  fx_LED((.fx  (+13 more)
scripts/: build.js  fragment.js
src/: tsconfig.json
src/systems/b748_systems_wasm/: Cargo.toml
src/systems/b748_systems_wasm/src/: lib.rs
(+2251 files in other folders)
