[package]
name = "b748_systems_wasm"
version = "0.1.0"
authors = ["FlyByWire Simulations", "Salty Simulations"]
edition = "2018"

[lib]
name = "systems"
crate-type = ["cdylib"]
test = false
doc = false

[dependencies]
uom = "0.30.0"
b748_systems = { path = "../b748_systems" }
systems = { path = "../systems" }
systems_wasm = { path = "../systems_wasm" }
msfs = { git = "https://github.com/flybywiresim/msfs-rs", branch = "main" }
